@@ -60,7 +60,8 @@ void serv_login(struct aim_user *user)
 #endif
 
 	if (p->login) {
-		if (!strlen(user->password) && !(p->options & OPT_PROTO_NO_PASSWORD)) {
+		if (!strlen(user->password) && !(p->options & OPT_PROTO_NO_PASSWORD) &&
+			!(p->options & OPT_PROTO_PASSWORD_OPTIONAL)) {
 			do_error_dialog(_("Please enter your password"), NULL, GAIM_ERROR);
 			return;
 		}
